[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d3-knowledge-graph"
version = "0.1.0"
description = "Turn your notes into an interactive knowledge graph."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "flask>=3.0.0",
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/d3kg"]

[project.scripts]
kgraph = "d3kg.cli:main"
